--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <!-- places -->
                     <div class="row places-list">
                         <div class="s-col-full col col-third mt-16">
-                            <img src="./assets/img/slider1/slider1.jpg" alt="New york" class="place-img">
+                            <img src="https://scontent.fhan5-8.fna.fbcdn.net/v/t39.30808-6/264764458_1223841478084613_4981000982362982255_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=nlyj5zujtSsAX8_dHBY&_nc_ht=scontent.fhan5-8.fna&oh=00_AT_ARi6hwfW6TjFhhR5EErgLFlqktrn7XnCnW8XGuWa_YA&oe=61D588DD" alt="New york" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -95,17 +95,17 @@
                             </div>
                         </div>
                         <div class="s-col-full col col-third mt-16">
-                            <img src="./assets/img/slider1/slider1.jpg" alt="New york" class="place-img">
+                            <img src="https://scontent-hkt1-2.xx.fbcdn.net/v/t39.30808-6/264408146_1222093291592765_2231254773230620598_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=rNlDPsviT4QAX9Wfz-h&_nc_ht=scontent-hkt1-2.xx&oh=00_AT_TLJ3GEWSOa_amegXUSwTq5RbaeG2Ri8LOnZoWFpMgQQ&oe=61D81B72" alt="New york" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">New York</h3>
-                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <h3 class="place-heading">BangKok</h3>
+                                <p class="place-time">Fri 12 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                                 <button class="btn s-col-full js-buy-ticket">Buy Tickets</button>
 
                             </div>
                         </div>
                         <div class="s-col-full col col-third mt-16">
-                            <img src="./assets/img/slider1/slider1.jpg" alt="New york" class="place-img">
+                            <img src="https://scontent-hkt1-2.xx.fbcdn.net/v/t39.30808-6/265175121_1223841538084607_4564166078207064411_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=xNx3xNmwKDQAX_Pxan7&_nc_ht=scontent-hkt1-2.xx&oh=00_AT_aG4inSdJIOht-WF2AvU5nxkH5JQb145JXcnhipIl_yg&oe=61D82031" alt="New york" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -123,7 +123,7 @@
 
                 <div class="row contact-near-foot">
                     <div class="col col-half s-col-full contact-info">
-                        <p><i class="ti-location-pin"></i>Vinh tho</p>
+                        <p><i class="ti-location-pin"></i>Huong Mac</p>
                         <p><i class="ti-mobile"></i>Phone: 0357807JQK</p>
                         <p><i class="ti-email"></i>Email: chixinhgai@gmail.com</p>
                     </div>
