--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn s-col-full  js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-col-full  js-buy-ticket">Buy Now</button>
                             </div>
                         </div>
                         <div class="s-col-full col col-third mt-16">
@@ -100,7 +100,7 @@
                                 <h3 class="place-heading">BangKok</h3>
                                 <p class="place-time">Fri 12 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn s-col-full js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-col-full js-buy-ticket">Buy Now</button>
 
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn s-col-full js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-col-full js-buy-ticket">Buy Now</button>
                             </div>
                         </div>
                     </div>
