--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                         class="text-control">
                                 </div>
                             </div>
-                            <input class="btn mt-16 pull-right s-full-width" type="submit" value="SEND">
+                            <input class="submit-btn btn mt-16 pull-right s-full-width" type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
